k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chengis
  labels:
    app.kubernetes.io/name: chengis
    app.kubernetes.io/part-of: chengis
