k8s/base/master-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chengis-master
  namespace: chengis
  labels:
    app.kubernetes.io/name: chengis
    app.kubernetes.io/component: master
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: chengis
    app.kubernetes.io/component: master
